# file-rescue

./: .gitignore  Cargo.toml  README.md  mise.toml
.github/workflows/: ci.yml  pages.yml  release.yml
examples/: mkdemo.rs
site/: index.html  style.css
src/: cli.rs  device.rs  lib.rs  main.rs  testutil.rs
src/carve/: carver.rs  mod.rs
src/carve/formats/: asf.rs  bmp.rs  gif.rs  isobmff.rs  jpeg.rs  matroska.rs  mod.rs  mpeg.rs  pdf.rs  png.rs  riff.rs  tiff.rs
src/image/: mod.rs  passes.rs  sink.rs  source.rs
src/map/: format.rs  mod.rs
src/ui/: progress.rs
tests/: carving_e2e.rs  cli.rs  imaging_e2e.rs
